<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_rounded_top_white"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingTop="24dp"
    android:paddingBottom="24dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text"
            style="@style/Header7.Bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />


        <TextView
            android:id="@+id/tvDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done"
            style="@style/TextParagraph2.Bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="16dp"
            android:textColor="@color/primary"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <EditText
        android:id="@+id/etHeadline"
        style="@style/InputPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_headline"
        android:maxLines="2"
        android:minLines="2" />

    <EditText
        android:id="@+id/etDescription"
        style="@style/InputPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/input_description"
        android:maxLines="2"
        android:minLines="2" />

    <EditText
        android:id="@+id/etWatermark"
        style="@style/InputPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_watermark"
        android:layout_marginTop="16dp"
        android:maxLines="2"
        android:minLines="2" />

</LinearLayout>